--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
         <ul class="dropdown-menu-ul">
           <li><%= image_tag 'icon-7.png' %><%= link_to t("navbar.about"), about_path %></li>
           <li><%= image_tag 'icon-8.png' %><%= link_to t("navbar.careers"), jobs_path %></li>
-          <li><%= image_tag 'icon-9.png' %><%= link_to t("navbar.news"), root_path %></li>
+          <li><%= image_tag 'icon-9.png' %><%= link_to t("navbar.news"), posts_path %></li>
         </ul>
       </div>
     </div>
