--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "components/index";
 @import "pages/index";
 
+// Posts
+@import "posts/index";
 
 // h1 {
 //   @include for-phone-only {
