--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -81,6 +81,7 @@
 
 .software-third-section-bottom {
   padding: 40px 0;
+  position: relative;
 }
 
 .software-fourth-section-graphics-container {
@@ -93,6 +94,7 @@
 
 .software-fourth-section-text {
   padding: 50px 0;
+  position: relative;
 }
 
 .software-fourth-section-wrapper {
@@ -153,6 +155,45 @@
 
 .software-slant-two {
   position: absolute;
+  width: 100%;
+  top: 690px;
+  @include for-xlarge-devices-up {
+    display: none;
+  }
 }
+
+.software-slant-two-big {
+  position: absolute;
+  width: 100%;
+  top: 690px;
+  @include for-large-devices-down {
+    display: none;
+  }
+  @include for-xlarge-devices-up {
+    height: 2600px;
+  }
+  @include for-xxlarge-devices-up {
+    height: 2860px;
+  }
+}
+
+
+.software-slant-two-loop {
+  position: absolute;
+  @include for-large-devices-down {
+    display: none;
+  }
+  @include for-xlarge-devices-up {
+    right: -660px;
+    top: 990px;
+    transform: rotate(-3deg);
+  }
+  @include for-xxlarge-devices-up {
+    right: -660px;
+    top: 1200px;
+    transform: rotate(-2deg);
+  }
+}
+
 
 
