--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -128,9 +128,13 @@
       </div>
     </div>
   </div>
+    <!-- <div class="about-third-section-wrapper software-fourth-section-wrapper" style="background-image: url('<%= cl_image_path "software-slant-2_cay6k1.png" %>')"> -->
   <div class="about-third-section-wrapper software-fourth-section-wrapper">
+    <%= cl_image_tag("software-slant-2_vbxnyd.png", class: "software-slant-two") %>
+    <%= cl_image_tag("software-slant-2-big_cdry4n.png", class: "software-slant-two-big") %>
+    <%= cl_image_tag("software-slant-2-loop_lzixx9.png", class: "software-slant-two-loop") %>
     <%= image_tag 'about-dots.png', class: 'software-dots' %>
-    <div class="container">
+    <div class="container" style="position: relative;">
       <div class="software-fourth-section-text">
         <div class="w-100 d-flex justify-content-center">
           <%= image_tag 'software-icon-5.png', class: 'about-icon m-auto' %>
