--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -5,13 +5,13 @@
     <div class="container">
       <div class="inks-section">
         <div class="inks-first-section-left software-first-section-left">
-          <h1 class="about-first-section-text"><%= t("software.first_section_title_one") %></h1>
+          <h3><%= t("software.first_section_title_one") %></h3>
           <p class="paragraph-text"><%= t("software.first_section_text_one") %></p>
-          <h1 class="about-first-section-text"><%= t("software.first_section_title_two") %></h1>
+          <h3><%= t("software.first_section_title_two") %></h3>
           <p class="paragraph-text"><%= t("software.first_section_text_two") %></p>
         </div>
         <div class="inks-first-section-right d-flex justify-content-center">
-          <%= cl_image_tag("software-graphic-1_m6jjgm.png", :quality=>"auto", class: "inks-graphic about-graphic-two") %>
+          <%= cl_image_tag("software-graphic-1_m6jjgm.png", class: "w-100 about-graphic-two") %>
         </div>
       </div>
     </div>
@@ -81,6 +81,7 @@
     </div>
   </div>
   <div class="software-section-third-wrapper">
+    <%= cl_image_tag("software-slant_p9xw4z.png", :quality=>"auto", class: "software-slant") %>
     <div class="container">
       <%= cl_image_tag("software-graphic-2_tqdjup.png", :quality=>"auto", class: "software-graphic-2") %>
       <div class="fxone-fifth-section-content software-fifth-section-content">
