--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,7 +4,7 @@
   <p><%= t("contact.contact_title_description")%></p>
   <div class="contact_details">
     <div class="contact-form">
-      <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/YOUR_EMAIL_HERE" method="post">
+      <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/leonardpercival@gmail.com" method="post">
           <input type="text" name="name" id="full-name" placeholder="<%= t('contact.form_name') %>" required="">
           <input type="email" name="_replyto" id="email-address" placeholder="<%= t('contact.form_email') %>" required="">
           <input type="text" name="phone" id="phone" placeholder="<%= t('contact.form_phone') %>" required="">
