--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -654,5 +654,57 @@
     width: 90vw;
     grid-row-gap: 40px;
   }
+}
 
+.cookie-bar {
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
+  padding: 0 20px;
+  height: 80px;
+  width: 100%;
+  background-color: #FFB03A;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease;
+  @include for-phone-only {
+    height: 120px;
+  }
+}
+
+.corner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background: linear-gradient(to bottom right, #FFB03A 50%, #FFF 50%);
+}
+
+.cookie-bar-content {
+  position: relative;
+  background-color: #FFF;
+  height: 40px;
+  padding: 0 70px;
+  // width: 50%;
+  border-radius: 10px;
+  p {
+    font-size: 14px;
+  }
+  @include for-phone-only {
+    height: 70px;
+    p {
+      font-size: 12px;
+    }
+  }
+}
+
+.cookie-close {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  img {
+    width: 20px;
+  }
 }
