--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
         <div class="about-first-section-left">
           <h1 class="about-first-section-text"><%= t("about.first_section_text") %></h1>
         </div>
-        <div class="about-first-section-right">
+        <div class="about-first-section-right no-padding-mobile">
           <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "about-graphic") %>
         </div>
       </div>
@@ -16,8 +16,8 @@
     <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "about-big-pill") %>
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill") %>
     <div class="container">
-      <div class="about-section">
-        <div class="about-second-section-left">
+      <div class="about-section mobile-column">
+        <div class="about-second-section-left no-padding-mobile">
           <%= cl_image_tag("about-graphic-2_gcrekd.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
           <%= image_tag 'about-dots.png', class: 'about-dots-section-two' %>
         </div>
