--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -14,11 +14,17 @@
   background: linear-gradient(#F6F7FA, #FFFFFF);
   padding-bottom: 200px;
   position: relative;
+  @include for-phone-only {
+    padding-bottom: 100px;
+  }
 }
 
 .about-third-section-wrapper {
   background-color: #FFFFFF;
   padding-bottom: 200px;
+  @include for-phone-only {
+    padding-bottom: 0;
+  }
 }
 
 .about-fourth-section-wrapper {
@@ -33,8 +39,7 @@
   background-size: cover;
   @include for-phone-only {
     padding-bottom: 50px;
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-image: none !important;
   }
 }
 
@@ -97,6 +102,9 @@
   @include for-small-devices-down {
     width: 75%;
   }
+  @include for-phone-only {
+    width: 100%;
+  }
 }
 
 .about-graphic {
@@ -125,6 +133,16 @@
   left: 50px;
   width: 60px;
   z-index: 1;
+  @include for-phone-only {
+    display: none;
+  }
+}
+
+.about-third-section-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .about-graphic-two {
@@ -164,9 +182,9 @@
   top: 0;
   right: 0;
   @include for-phone-only {
-  width: 300px;
-  top: 30px;
-  right: -190px;
+    width: 210px;
+    top: 240px;
+    right: -130px;
   }
   // @include for-large-devices-down {
   //   right: -395px;
@@ -318,6 +336,27 @@
 .mobile-column {
   @include for-phone-only {
     flex-direction: column;
+  }
+}
+
+.mobile-center {
+  @include for-phone-only {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.hide-mobile {
+  @include for-phone-only {
+    display: none;
+  }
+}
+
+.show-mobile {
+  @include for-small-devices-up {
+    display: none;
   }
 }
 
