--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   padding: 100px 0;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .footer-wrapper {
@@ -10,23 +12,9 @@
   z-index: 5;
 }
 
-.footer-left {
-  display: flex;
-  width: 70%;
-  .footer-section {
-    width: 28%;
-  }
-  .home-section {
-    width: 15%;
-  }
-}
-
-.footer-right {
-  display: flex;
-  width: 30%;
-  .footer-section {
-    width: 33%;
-  }
+.footer-section {
+  min-width: 127px;
+  padding-bottom: 40px;
 }
 
 .footer-link {
