--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -73,14 +73,14 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul>
       <li><%= image_tag 'icon-1.png' %><a href="/">Printers</a></li>
-      <li><%= image_tag 'icon-2.png' %><a href="/">Software</a></li>
-      <li><%= image_tag 'icon-3.png' %><a href="/">Inks & Consumables</a></li>
-      <li><%= image_tag 'icon-4.png' %><a href="/">Worldwide Distributors</a></li>
-      <li><%= image_tag 'icon-5.png' %><a href="/">Cost of ownership?</a></li>
-      <li><%= image_tag 'icon-6.png' %><a href="/">FAQ</a></li>
-      <li><%= image_tag 'icon-7.png' %><a href="/">About</a></li>
-      <li><%= image_tag 'icon-8.png' %><a href="/">Career</a></li>
-      <li><%= image_tag 'icon-9.png' %><a href="/">News/Event</a></li>
+      <li><%= image_tag 'icon-2.png' %><a href="/software">Software</a></li>
+      <li><%= image_tag 'icon-3.png' %><a href="/inks_and_consumables">Inks & Consumables</a></li>
+      <li><%= image_tag 'icon-4.png' %><a href="/distributor">Worldwide Distributors</a></li>
+      <li><%= image_tag 'icon-5.png' %><a href="/cost_of_ownership">Cost of ownership?</a></li>
+      <li><%= image_tag 'icon-6.png' %><a href="/faq">FAQ</a></li>
+      <li><%= image_tag 'icon-7.png' %><a href="/about">About</a></li>
+      <li><%= image_tag 'icon-8.png' %><a href="/jobs">Career</a></li>
+      <li><%= image_tag 'icon-9.png' %><a href="/posts">News/Event</a></li>
     </ul>
   </div>
 </div>
