--- a/app/views/shared/_newsletter.html.erb
+++ b/app/views/shared/_newsletter.html.erb
@@ -15,7 +15,7 @@
           %>
           <%= submit_tag "#{ t('newsletter.button') }", class: "about-form-button" %>
         <% end %>
-        <p class="paragraph-text" style="font-size: 10px !important;"><%= t("newsletter.unsubscribe") %> <span style="color: #F3A300"><%= t("newsletter.privacy") %></span></p>
+        <p class="paragraph-text" style="font-size: 10px !important;"><%= t("newsletter.unsubscribe") %> <a href="/privacy_policy" class="privacy-link"><span style="color: #F3A300"><%= t("newsletter.privacy") %></span></a></p>
       </div>
     </div>
   </div>
