--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -30,7 +30,8 @@
         <% end %>
       </div>
       <div class="footer-section">
-        <%= link_to t("navbar.contact"), root_path, class: 'grey medium-text footer-link' %>
+        <%= link_to t("navbar.contact"), root_path, class: 'grey medium-text footer-link mb16' %>
+        <%= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link" %>
       </div>
       <div class="footer-section">
         <a href="#" role="button" id="productsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="footer-link grey">
