--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -4,20 +4,20 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-little-pill") %>
     <div class="container">
       <div class="about-section fxone-section">
-        <div class="about-second-section-left">
+        <div class="about-second-section-left no-padding-mobile">
           <%= cl_image_tag("fxone-remote-graphic-1_mxspzx.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
-        <div class="about-second-section-right">
-          <h1><%= t("fxone_remote.first_section_title") %></h1>
-          <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_remote.first_section_text") %></p>
+        <div class="about-second-section-right no-padding-mobile">
+          <h1 class="responsive-header"><%= t("fxone_remote.first_section_title") %></h1>
+          <p class="paragraph-text about-second-section-text"><%= t("fxone_remote.first_section_text") %></p>
         </div>
       </div>
     </div>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper">
-    <%= image_tag 'about-dots.png', class: 'fxone-dots' %>
+    <%= image_tag 'about-dots.png', class: 'fxone-dots hide-mobile' %>
     <%= image_tag 'inks-icon-3.png', class: 'about-icon' %>
-    <h3 class="about-first-section-text ownership-second-section-text text-center"><%= t("fxone_remote.second_section_title") %></h3>
+    <h3 class="text-center"><%= t("fxone_remote.second_section_title") %></h3>
   </div>
   <div class="fxone-third-section-wrapper">
     <div class="container">
@@ -120,13 +120,13 @@
     <div class="container">
       <div class="fxone-fourth-section-header">
         <%= image_tag 'inks-icon-3.png', class: 'about-icon m-auto' %>
-        <h3 class="about-first-section-text ownership-second-section-text text-center"><%= t("fxone_remote.fourth_section_title") %></h3>
+        <h3 class="text-center"><%= t("fxone_remote.fourth_section_title") %></h3>
       </div>
       <div class="about-section fxone-section">
-        <div class="about-first-section-left">
+        <div class="about-first-section-left no-padding-mobile">
           <%= cl_image_tag("fxone-remote-graphic-3_npzsvy.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
-        <div class="about-first-section-right">
+        <div class="about-first-section-right no-padding-mobile">
           <%= cl_image_tag("fxone-remote-graphic-4_tinbue.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
       </div>
