--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
         <h3><%= t("home.second_column_title") %></h3>
         <p><%= t("home.second_column_title_description") %></p>
         <div class="second-section-two-columns">
-          <ul class="second-section-two-columns-one">
+          <ul class="second-section-two-columns-one ul">
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_one") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_three") %></li>
@@ -38,7 +38,7 @@
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_five") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_six") %></li>
           </ul>
-          <ul class="second-section-two-columns-two">
+          <ul class="second-section-two-columns-two ul">
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_one_one") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_two") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_three_three") %></li>
@@ -51,7 +51,7 @@
         <h3><%= t("home.second_column_title_two") %></h3>
         <p><%= t("home.second_column_title_description") %></p>
         <div class="second-section-two-columns">
-          <ul class="second-section-two-columns-one">
+          <ul class="second-section-two-columns-one ul">
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_one") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_two") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_three") %></li>
@@ -60,7 +60,7 @@
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_six") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_seven") %></li>
           </ul>
-          <ul class="second-section-two-columns-two">
+          <ul class="second-section-two-columns-two ul">
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_one_one") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_two_two") %></li>
             <li><%= image_tag 'foenix-check.png' %><%= t("home.second_column_two_three_three") %></li>
