meta data in for default values

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -604,7 +604,7 @@
 
 .fourth-section-grid {
   // background-color: blue;
-  // width: 500px;
+  width: 500px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 30px;
