--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
       <%= image_tag 'section-two-icon.png' %>
       <h2><%= t("home.title_second") %></h2>
       <p><%= t("home.title_second_description") %></p>
-      <a href="/" class="yellow-button"><%= t("components.yellow_button") %> <i class="fas fa-arrow-right"></i></a>
+      <a href="/software" class="yellow-button"><%= t("components.yellow_button") %> <i class="fas fa-arrow-right"></i></a>
     </div>
     <div class="second-section-two">
       <div class="code-everything">
@@ -201,7 +201,7 @@
         <%= image_tag 'hand-icon.png' %>
         <h2><%= t("home.fourth_title") %></h2>
         <p><%= t("home.fourth_description") %></p>
-        <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
+        <a href="/about" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="fourth-section-grid">
           <%= image_tag 'food-icon.png' %>
