--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -1,14 +1,15 @@
 <div class="fxone-wrapper fxone-plus">
+  <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
   <div class="about-second-section-wrapper fxone-first-section-wrapper fxone-plus-wrapper">
-    <%= image_tag 'about-dots.png', class: 'fxone-plus-dots' %>
-    <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill") %>
+    <%= image_tag 'about-dots.png', class: 'fxone-plus-dots hide-mobile' %>
+    <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill hide-mobile") %>
     <div class="container">
-      <div class="about-section fxone-section">
+      <div class="about-section fxone-section mobile-column">
         <div class="about-second-section-left">
-          <h1><%= t("fxone_plus.first_section_title") %></h1>
+          <h1 class="responsive-header"><%= t("fxone_plus.first_section_title") %></h1>
           <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
         </div>
-        <div class="about-second-section-right">
+        <div class="about-second-section-right no-padding-mobile">
           <%= cl_image_tag("fxone-plus_n6k9lj.png", :quality=>"auto", class: "about-graphic about-graphic-two fxone-plus-graphic") %>
           <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
             <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
