--- a/app/assets/stylesheets/posts/_show.scss
+++ b/app/assets/stylesheets/posts/_show.scss
@@ -100,3 +100,9 @@
     flex-direction: column;
   }
 }
+.post-mini-text {
+  text-decoration: none !important;
+  color: gray !important;
+  max-width: 280px;
+  text-overflow: ellipsis;
+}
