--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -62,7 +62,7 @@
         <% end %>
       <% end %>
 
-      <% if current_user %>
+      <% if policy(Job).new? %>
         <%= link_to "New Job", new_admin_job_path, class: "btn new-job-button" %>
       <% end %>
     </div>
