--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render "form" %>
+<div class="container" style="padding-top: 120px;">
+  <h2>Edit Job Posting</h2>
+  <%= render "form" %>
+</div>
+
