--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,3 +1,4 @@
-<div class="container">
+<div class="container" style="padding-top: 120px;">
+  <h2>Create New Job Posting</h2>
   <%= render "form" %>
 </div>
