--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,8 +23,9 @@
             <div class="post-card-text">
               <h6><%= post.title %></h6>
               <p><%= truncate(post.text, length: 120) %></p>
+              <!-- <p class="post-mini-text"><%= simple_format @post.text %></p> -->
               <div class="post-card-text-details">
-                <p class="font-12">Reading Time: 14mins</p>
+                <p class="font-12">Reading Time: <%= post.time %> mins</p>
                 <pre> • </pre>
                 <p class="font-12"><%= post.created_at.strftime("%B %d, %Y") %></p>
               </div>
