--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "news-pill-bottom") %>
   <div class="post-show-container">
     <h1><%= @post.title %></h1>
-    <p>Reading time 10mins</p>
+    <p>Reading time <%= @post.time %> mins</p>
     <%= cl_image_tag @post.image %>
     <div class="post-show-details">
       <div class="post-show-social-media">
@@ -13,6 +13,14 @@
           <a href="/"><i class="fab fa-twitter"></i></a>
           <a href="/"><i class="fab fa-linkedin"></i></a>
         </div>
+        <% if policy(Post).edit? %>
+          <%= link_to edit_admin_post_path(@post) do %>
+            <i class="fas fa-edit"></i>
+          <% end %>
+          <%= link_to admin_post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} do %>
+            <i class="fas fa-trash"></i>
+          <% end %>
+        <% end %>
       </div>
       <div class="post-show-content">
         <p><%= simple_format @post.text %></p>
@@ -26,11 +34,11 @@
           <div class="post-show-card">
             <%= link_to post_path(post) do %>
               <%= cl_image_tag post.image %>
-              <div class="post-show-card-text">
-                <h6><%= post.title %></h6>
-                <p><%= truncate(post.text, length: 90) %></p>
-              </div>
             <% end %>
+            <div class="post-show-card-text">
+              <h6><%= post.title %></h6>
+              <p class="post-mini-text"><%= simple_format @post.text %></p>
+            </div>
           </div>
       <% end %>
     </div>
